Button Color Changed for Alert and Prompt

--- a/Music Player/styles.css
+++ b/Music Player/styles.css
@@ -299,7 +299,7 @@ ul {
 }
 
 .input-content button {
-  background-color: #2196f3;
+  background-color: #ff5c8a;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -346,7 +346,7 @@ ul {
 }
 
 .alert-content button {
-  background-color: #2196f3;
+  background-color: #ff5c8a;
   color: #fff;
   border: none;
   padding: 10px 20px;
